--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="container-fluid bg-danger">
         <nav class="navbar navbar-inverse navbar-light bg-warning navbar-toggleable-md">
-            <img class="image-fluid" src="../IMG/Matematicas.png" width="100px" height="100px">
-            <a class="navbar-brand text-info" href="../HTML/Index.html" style="font-size: 40px;">Página de la matemáticas</a>
+            <img class="image-fluid" src="Matematicas.png" width="100px" height="100px">
+            <a class="navbar-brand text-info" href="index.html" style="font-size: 40px;">Página de la matemáticas</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -108,6 +108,6 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script> 
-    <script src="./../JS/App.js"></script>
+    <script src="App.js"></script>
     </body>
 </html>
