--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <input type="number" class="form-control" id="numcalificacion">
                     <button type="button" class="btn btn-info btn-block mt-3" id="boton verificacion">Verificar</button>
                     <div id= "divimprimircal" class="alert alert-warning mt-3" role="alert"></div>
-                    <audio id="audiorep" src="../Audio/Reprobada.mp3"></audio>
+                    <audio id="audiorep" src="Reprobada.mp3"></audio>
                 </form>
             </div>
         </div>
